css: Justify the text, and avoid word-breaks at ends.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,7 +35,7 @@ pre code { background: none; }
 
 /* misc elements */
 img, iframe, video { max-width: 100%; }
-main { hyphens: auto; }
+main { hyphens: manual; text-align: justify;}
 blockquote {
   background: #f9f9f9;
   border-left: 5px solid #ccc;
